Finished Day 3 Part 2.